# SeedlingTracker

./: .gitignore  README.md  SeedlingNew.py  SeedlingTracker.py  create_offline.sh  generate_sample_data.py  pyproject.toml  requirements.txt  requirements_win.txt  requirements_windows.txt  run.ps1  run.sh
1_Data/: README.md
2_Processed/: README.md
3_Results/: README.md
legacy/: Baby_plant_segmentation_v2.html  Baby_plant_segmentation_v2.ipynb  KS_for_seedlings.ipynb  SeedlingNew_old_backup.py  Seedling_seg_v3_B.py  baby_plant_segmentation.html  baby_plant_segmentation.ipynb  main.py  plant_tools.py
legacy/Miguel_scripts/: Running_instructions.html  Running_instructions.ipynb  Seedling_seg_v3_A.html  Seedling_seg_v3_A.ipynb  Seedling_seg_v3_A.py  Seedling_seg_v3_B.html  Seedling_seg_v3_B.ipynb  Seedling_seg_v3_B.py  Seedling_seg_v3_C.html  Seedling_seg_v3_C.ipynb  iTools.py  miguel_tools.py  newenv.yml
