[project]
name = "lichun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.31.0",
    "matplotlib>=3.10.8",
    "napari>=0.6.6",
    "numpy>=2.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "scikit-image>=0.26.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tifffile>=2025.12.20",
    "tqdm>=4.67.1",
]
